Added Catalog section

--- a/css/amazon.css
+++ b/css/amazon.css
@@ -44,6 +44,11 @@ body{
     margin-right: 0px;
 }
 
+.nav__link{
+    text-decoration: none;
+    color: #000000;
+}
+
 .phone{
     font-weight: 800;
     font-size: 16px;
@@ -63,6 +68,7 @@ body{
 .headr-content__title{
     font-size: 40px;
     font-weight: 900;
+    text-transform: uppercase;
 }
 .headr-content__description{
     font-size: 17px;
@@ -84,9 +90,59 @@ body{
     font-size: 18px;
     line-height: 160%;
     padding: 15px 56px;
+    cursor: pointer;
 }
 .button--shadow{
     box-shadow: 0px 10px 25px rgba(255, 108, 108, 0.5);
 
 }
 /* ============= End of Heading Section ============= */
+
+/* #################### CATALOG section #################### */
+
+.section{
+    padding: 100px 0;
+}
+
+.section__title{
+  margin-bottom: 50px;
+}
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.card{
+  flex-basis: 25%;
+  background-color: #F8F8F8;
+  box-shadow: 0px 4px 4px rgba(104, 104, 104, 0.1);
+  border-radius: 5px;
+  text-align: center;
+  padding: 30px;
+}
+
+.goods__card{
+  margin-bottom: 30px;
+}
+.card__image{
+  margin-bottom: 28px;
+}
+.card__text{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 28px;
+}
+.card__title{
+  font-size: 16px;
+  line-height: 24px;
+  text-align: left;
+  max-width: 200px;
+}
+.card__price{
+  font-size: 36px;
+}
+.card__button{
+  width: 100%;
+}
+/* #################### End ofCATALOG section #################### */
