--- a/css/amazon.css
+++ b/css/amazon.css
@@ -145,4 +145,28 @@ body{
 .card__button{
   width: 100%;
 }
-/* #################### End ofCATALOG section #################### */
+/* #################### End of CATALOG section #################### */
+
+/* #################### Customer reviews section #################### */
+.review-cards{
+  display: flex;
+  justify-content: space-between;
+}
+.review-card{
+  background: #FFFFFF;
+  border: 1px solid #EDEDED;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(131, 131, 131, 0.25);
+  border-radius: 10px;
+  padding: 20px 30px;
+  flex-basis: 24%;
+}
+.review-card__title{
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+.review-card_text{
+  font-size: 14px;
+  line-height: 21px;
+}
+/* #################### End of Customer reviews section #################### */
