--- a/css/amazon.css
+++ b/css/amazon.css
@@ -170,3 +170,74 @@ body{
   line-height: 21px;
 }
 /* #################### End of Customer reviews section #################### */
+
+/* #################### Footer section section #################### */
+.footer{
+  background-color: #F8F8F8;
+
+}
+
+.contacts{
+  display: flex;
+  justify-content: space-between;
+}
+.contacts__form {
+ display: flex;
+ flex-direction: column;
+}
+.form{
+  flex-basis: 45%;
+ 
+}
+.map{
+  flex-basis: 50%;
+}
+.map iframe{
+  width: 100%;
+  height: 100%;
+}
+.input{
+  background-color: #FFFFFF;
+  box-shadow: 0px 4px 4px rgba(217, 217, 217, 0.25);
+  border-radius: 5px;
+  border: none;
+  padding: 25px 30px;
+  font-size: 14px;
+}
+
+.form__input{
+  flex-basis: 50%;
+}
+
+.form__inputs{
+  display: flex;
+  justify-content: space-between;  
+}
+.form__input{
+  width: 47%;
+  margin-bottom: 20px;
+}
+
+.form__inputs input:first-child{
+  margin-right: 30px;
+}
+.contacts__form textarea{
+  width: 100%;
+  display: block;
+  margin-bottom: 30px;
+}
+.form__buttons{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+}
+.social{
+  display: flex;
+}
+.social_link{
+  margin-left: 22px;
+
+}
+
+/* #################### End of Footer section section #################### */
